fix some elements being visible through the header

--- a/assets/static/css/style.css
+++ b/assets/static/css/style.css
@@ -27,6 +27,7 @@ body {
     position: sticky;
     top: 0;
     background-color: var(--background-color);
+    z-index: 98;
 
     > img {
       margin: auto 0;
